<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cartview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pictureCard"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cartview"
    android:paddingTop="10dp"
    cartview:cardCornerRadius="@dimen/cornerradius_cardview"
    android:layout_marginBottom="10dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/pictureCard2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_cartview"
                android:background="@drawable/image"
                android:scaleType="centerCrop"
                android:transitionName="@string/transitionname_picture"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundtext_card"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:id="@+id/userNameCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsize_username_card" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/firstWord"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/firstWord_card"
                        android:textSize="@dimen/firstword_textsize_card" />

                    <TextView
                        android:id="@+id/timeCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/timecard_card" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/like_margintop_card"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/likeCheckCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/checkbox_selector" />

                    <TextView
                        android:id="@+id/likeNumberCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/likenumber_card"
                        android:textSize="@dimen/firstword_textsize_card" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </FrameLayout>

</android.support.v7.widget.CardView>